--- a/app/locale/es_CO/Mage_Checkout.csv
+++ b/app/locale/es_CO/Mage_Checkout.csv
@@ -44,7 +44,7 @@
 "Checkout Method","Método de Compra"
 "Checkout with Multiple Addresses","Comprar con múltiples direcciones"
 "City","Ciudad"
-"Click <a href=""%s"" onclick=""this.target='_blank'"">here to print</a> a copy of your order confirmation.","Haga clic <a href=""%s"" onclick=""this.target='_blank'"">acá para imrpimir</a> una copia de la orden de confirmación."
+"Click <a href=""%s"" onclick=""this.target='_blank'"">here to print</a> a copy of your order confirmation.","Haga clic <a href=""%s"" onclick=""this.target='_blank'"">acá para imprimir</a> una copia de la orden de confirmación."
 "Clear Shopping Cart","Limpiar el carrito de compras"
 "Close","Cerrar"
 "Company","Compañia"
