--- a/app/locale/es_CO/Mage_Core.csv
+++ b/app/locale/es_CO/Mage_Core.csv
@@ -300,3 +300,5 @@
 "(Shift-)Click or drag to change value","(Shift-)Click or drag to change value"
 "Time:","Time:"
 "DHTML Date/Time Selector","DHTML Date/Time Selector"
+"Sidebar Right","Barra Der."
+"Sidebar Left","Barra Izq."
