--- a/app/locale/es_CO/Mage_Adminhtml.csv
+++ b/app/locale/es_CO/Mage_Adminhtml.csv
@@ -19,7 +19,7 @@
 "- or click and drag for faster selection.","- or click and drag for faster selection."
 "-- Please Select --","-- Por favor, seleccione --"
 "-- Please select --","-- Please select --"
-"-- Please select a category --","-- Por favor, elija una categoría --"
+"-- Please select a category --","-- Por favor, elige una categoría --"
 "--Please Select--","-- Por favor, seleccione --"
 "1 Hour","1 Hour"
 "12 Hours","12 Hours"
