--- a/app/locale/es_CO/Mage_Catalog.csv
+++ b/app/locale/es_CO/Mage_Catalog.csv
@@ -125,8 +125,8 @@
 "Change or Retrieve attribute store view","Change or Retrieve attribute store view"
 "Change status","Cambiar estado"
 "Check items to add to the cart or","Check items to add to the cart or"
-"Choose an Option...","Elija una Opción..."
-"Choose option...","Elija opción.."
+"Choose an Option...","Elige una Opción..."
+"Choose option...","Elige opción.."
 "Clear All","Limpiar"
 "Clear All Items","Limpiar Todos los Artículos"
 "Close Window","Cerrar Ventana"
