--- a/app/locale/es_CO/Mage_Newsletter.csv
+++ b/app/locale/es_CO/Mage_Newsletter.csv
@@ -134,3 +134,4 @@
 "Subscribe","Subscribe"
 "Newsletter","Newsletter"
 "Sign up for our newsletter","Sign up for our newsletter"
+"This email address is already assigned to another user.","Esta dirección de correo electrónico ya está registrada."
