--- a/app/locale/es_CO/Mage_Tax.csv
+++ b/app/locale/es_CO/Mage_Tax.csv
@@ -116,3 +116,9 @@
 "You cannot delete this tax class as it is used for %d products.","No puede borrar esta clase de impuesto, ya que se utiliza para %d productos."
 "You cannot delete this tax class as it is used in Tax Rules. You have to delete the rules it is used in first.","No puede borrar esta clase de impuesto ya que se utiliza en las reglas de impuestos. Primero debe borrar las reglas en que se utiliza."
 "Zip/Post Code","Código postal"
+"Grand Total (Excl. Tax)","Sub Total (Excl. Imp.)"
+"Grand Total (Excl.Tax)","Sub Total (Excl. Imp.)"
+"Grand Total (Incl. Tax)","Total (Incl. Imp.)"
+"Grand Total (Incl.Tax)","Total (Incl. Imp.)"
+"Grand Total Excl. Tax","Sub Total Excl. Imp."
+"Grand Total Incl. Tax","Total Incl. Imp."
